--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "antd": "^4.16.6",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
